<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Fragment.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="670dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="4dp"
                android:adjustViewBounds="true"
                android:background="@color/grey"
                tools:scaleType="fitXY"
                tools:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="horizontal"
                android:weightSum="2">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_design"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:id="@+id/image_star"
                        android:layout_width="65dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_star_foreground" />

                    <TextView
                        android:id="@+id/star"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_star"
                        android:gravity="center"
                        android:text="000"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/card_design"
                    android:paddingBottom="8dp">

                    <ImageView
                        android:id="@+id/image_forks"
                        android:layout_width="65dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:padding="8dp"
                        android:src="@drawable/forks" />

                    <TextView
                        android:id="@+id/forks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/image_forks"
                        android:gravity="center"
                        android:text="000"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@color/light_green"
                android:orientation="vertical"
                android:padding="8dp"
                android:paddingTop="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/name"
                        android:textColor="@color/teal_900"
                        android:textSize="@dimen/large_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/medium_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/author"
                        android:textColor="@color/teal_900"
                        android:textSize="@dimen/large_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/author"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/medium_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/language"
                        android:textColor="@color/teal_900"
                        android:textSize="@dimen/large_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/language"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/medium_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/description"
                        android:textColor="@color/teal_900"
                        android:textSize="@dimen/large_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/medium_text" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/open_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/margin_left"
        android:backgroundTint="@color/light_grey"
        android:text="@string/open_url"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/sky_blue" />

</FrameLayout>